--- a/about/me.html
+++ b/about/me.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link href="../styleSheet.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="desciption" content="About Giovanni Suzzi">
     <meta name="author" content="Claudio Surmon">
@@ -63,6 +64,9 @@
             development. The result of this expansion is the website you're currently reading.
         </p>
     </main>
+    <footer>
+        
+    </footer>
 </body>
 
 </html>
