--- a/blogs/2020-02-25-blog1.html
+++ b/blogs/2020-02-25-blog1.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link href="../styleSheet.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="desciption" content="Blog about as we may think">
     <meta name="author" content="Claudio Surmon">
@@ -12,22 +13,25 @@
 </head>
 
 <body>
-    <nav>
-        <a href="../index.html">Home</a>
-        <a href="../about/me.html">About</a>
-        <a href="blog-index.html">Blogs</a>
-        <a href="../images/Gallery-index.html">Gallery</a>
-        <a href="../underConstruction.html">Construction Zone</a>
-    </nav>
+
+    
+    <header>
+        <nav>
+            <a href="../index.html">Home</a>
+            <a href="../about/me.html">About</a>
+            <a href="blog-index.html">Blogs</a>
+            <a href="../images/Gallery-index.html">Gallery</a>
+            <a href="../underConstruction.html">Construction Zone</a>
+        </nav>
+        
+    </header>
     <article>
-        <header>
-            <h1>
-                As we may retroactively think.
-            </h1>
-            <p>
-                by Claudio Surmon
-            </p>
-        </header>
+        <h1>
+            As we may retroactively think.
+        </h1>
+        <p>
+            by Claudio Surmon
+        </p>
         <figure>
             <img src="../images/Vannevar_Bush_portrait.jpg" alt="Portrait of Vannevar Bush">
             <figcaption>
