--- a/blogs/2020-02-28-blog5.html
+++ b/blogs/2020-02-28-blog5.html
@@ -2,10 +2,12 @@
 <html>
 
 <head>
+    <link href="../styleSheet.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="author" content="Claudio Surmon">
     <meta name="desciption" content="Blog about Meta-data">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>
         Meta Meta data blog post;
     </title>
