--- a/blogs/blog-index.html
+++ b/blogs/blog-index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link href="../styleSheet.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="desciption" content="Blog index">
     <meta name="author" content="Claudio Surmon">
@@ -35,6 +36,9 @@
             <li><a href="2020-02-28-blog5.html"> 2020-02-28 &emsp;Meta Meta-data reflection</a></li>
         </ol>
     </main>
+    <footer>
+
+    </footer>
 
 </body>
 
