--- a/images/Gallery-index.html
+++ b/images/Gallery-index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link href="../styleSheet.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="desciption" content="Gallery index">
     <meta name="author" content="Claudio Surmon">
@@ -35,6 +36,9 @@
         </ul>
     </main>
 
+    <footer>
+        
+    </footer>
 </body>
 
 </html>
