--- a/underConstruction.html
+++ b/underConstruction.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link href="styleSheet.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="desciption" content="Plans for Webpage">
     <meta name="author" content="Claudio Surmon">
@@ -37,7 +38,7 @@
             the Giovanni's military background, where being tidy is of the upmost importance, while the orange would be
             to capture the readers attention.
         </p>
-        <img src=images/Color-Hunt-Palett-165293.png alt="Color Palett" longdesc="This is a PlaceHolder" width="800">
+        <img src=images/Color-Hunt-Palett-165293.png alt="Color Palett" longdesc="This is a PlaceHolder" width="600">
 
         <h3>
             Data structure
