--- a/blogs/2020-02-26-blog2.html
+++ b/blogs/2020-02-26-blog2.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link href="../styleSheet.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="author" content="Claudio Surmon">
     <meta name="desciption" content="Blog about the first message on Arpanet">
