--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-  <header id = "header">
-    <nav style = "text-align: center;">
+  <header>
+    <nav>
       <a href="index.html">Home</a>
       <a href="about/me.html">About</a>
       <a href="blogs/blog-index.html">Blogs</a>
@@ -23,10 +23,10 @@
       <a href="underConstruction.html">Construction Zone</a>
     </nav>
 
-    <h1 style = "text-align: center;">
+    <h1>
       Giovanni Suzzi
     </h1>
-    <h2 style = "text-align: center;">
+    <h2>
       The freelance mercenary turned freelance coder</h2>
     <img src=images/PlaceHolder.png alt="PlaceHolder Image" longdesc="This is a PlaceHolder" height="256" width="256">
   </header>
