--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <script src = "index.js"></script>
-  <link href="styleSheet.css" rel="stylesheet">
+  <link href="stylesheet.css" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="desciption" content="Home page">
   <meta name="author" content="Claudio Surmon">
