--- a/underConstruction.html
+++ b/underConstruction.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link href="styleSheet.css" rel="stylesheet">
+    <link href="stylesheet.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="desciption" content="Plans for Webpage">
     <meta name="author" content="Claudio Surmon">
