Added stylesheet properly

--- a/about/me.html
+++ b/about/me.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link href="../styleSheet.css" rel="stylesheet">
+    <link href="../stylesheet.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="desciption" content="About Giovanni Suzzi">
     <meta name="author" content="Claudio Surmon">
@@ -65,7 +65,7 @@
         </p>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 
