--- a/blogs/2020-02-28-blog5.html
+++ b/blogs/2020-02-28-blog5.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link href="../styleSheet.css" rel="stylesheet">
+    <link href="../stylesheet.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="author" content="Claudio Surmon">
     <meta name="desciption" content="Blog about Meta-data">
