--- a/images/Gallery-index.html
+++ b/images/Gallery-index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link href="../styleSheet.css" rel="stylesheet">
+    <link href="../stylesheet.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="desciption" content="Gallery index">
     <meta name="author" content="Claudio Surmon">
@@ -37,7 +37,7 @@
     </main>
 
     <footer>
-        
+
     </footer>
 </body>
 
