--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </h2>
     <a href="blogs/2020-02-28-blog5.html">Meta meta-data blog post</a>
 
-    <button onclick="myFunction()">Click me</button>
+    <button onclick="colorButton()">Click me</button>
   </main>
 
   <footer>
