--- a/blogs/2020-02-28-blog5.html
+++ b/blogs/2020-02-28-blog5.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-    <link href="../stylesheet.css" rel="stylesheet">
+    <link href="../css/stylesheet.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="author" content="Claudio Surmon">
     <meta name="desciption" content="Blog about Meta-data">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <title>
         Meta Meta data blog post;
     </title>
