--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 
 <head>
-  <script src="sidebar.js"></script>
-  <link href="stylesheet.css" rel="stylesheet">
+  <script src="js/sidebar.js"></script>
+  <script src="js/index.js"></script>
+  <link href="css/stylesheet.css" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="desciption" content="Home page">
   <meta name="author" content="Claudio Surmon">
@@ -15,17 +16,7 @@
 
 <body id="body" onload="onLoad()" onresize="onLoad()">
   <header>
-    <nav id="sidebar" class="sidebar">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <a href="#">Home</a>
-      <a href="about/me.html">About</a>
-      <a href="blogs/index.html">Blogs</a>
-      <a href="images/">Gallery</a>
-      <a href="underConstruction.html">Construction Zone</a>
-    </nav>
-    <nav id="main">
-
-    </nav>
+    <script src="js/nav.js"></script>
 
     <h1>
       <button class="openbtn" onclick="openNav()">&#9776;</button>
