--- a/test.html
+++ b/test.html
@@ -12,14 +12,9 @@
 </head>
 
 <body id="body" onload="onLoad()" onresize="onLoad()">
-    <nav id="sidebar" class="sidebar">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#">Home</a>
-        <a href="about/me.html">About</a>
-        <a href="blogs/index.html">Blogs</a>
-        <a href="images/">Gallery</a>
-        <a href="underConstruction.html">Construction Zone</a>
-    </nav>
+
+    <script src="nav.js"></script>
+
     <header>
 
         <button class="openbtn" onclick="openNav()">&#9776;</button>
