Massive style overhaul

--- a/about/index.html
+++ b/about/index.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <link href="../stylesheet.css" rel="stylesheet">
     <meta charset="UTF-8">
-    <meta name="desciption" content="About Giovanni Suzzi">
-    <meta name="author" content="Claudio Surmon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        About Giovanni Suzzi
-    </title>
+
+    <link href="../css/stylesheet.css" rel="stylesheet">
+
+    <meta name="desciption" content="About page">
+    <meta name="author" content="Claudio Surmon">
+
+    <title>Document</title>
 </head>
 
 <body>
     <header>
-        <nav>
-            <a href="../index.html">Home</a>
-            <a href="">About</a>
-            <a href="../blogs/blog-index.html">Blogs</a>
-            <a href="../images/Gallery-index.html">Gallery</a>
-            <a href="../underConstruction.html">Construction Zone</a>
-        </nav>
-        <h1>
-            About - Giovanni Suzzi
-        </h1>
+        <img src="../images/logo128.png" alt="Logo" style="width:100px;height:100px;">
     </header>
 
+    <nav>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li class="active"><a href="index.html">About</a></li>
+            <li><a href="../blogs/index.html">Blogs</a></li>
+            <li><a href="../contact/index.html">Contact Me</a></li>
+            <li><a href="../construction/index.html">Construction Zone</a></li>
+        </ul>
+    </nav>
+
     <main>
+        <h1>
+            About Me
+        </h1>
+
         <figure>
             <img src=../images/dadWithGun.jpg alt="William Surmon holding machine gun"
                 longdesc="Image of William Surmon holding browning machine gun" width="384">
@@ -39,7 +45,7 @@
         </figure>
 
 
-        <h3>Early life and Career</h3>
+        <h2>Early life and Career</h2>
         <p>
             Giovanni Suzzi is a 54 year old man, born and raised on the outskirts of Trieste in the Fruili-Venezia Giula
             region.
@@ -64,9 +70,11 @@
             development. The result of this expansion is the website you're currently reading.
         </p>
     </main>
-    <footer>
 
+    <footer>
+        <p>this is a footer</p>
     </footer>
+
 </body>
 
 </html>
