--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link href="../stylesheet.css" rel="stylesheet">
+    <link href="../css/stylesheet.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="desciption" content="Blog about as we may think">
     <meta name="author" content="Claudio Surmon">
@@ -14,17 +14,19 @@
 
 <body>
 
-    
     <header>
-        <nav>
-            <a href="../index.html">Home</a>
-            <a href="../about/me.html">About</a>
-            <a href="blog-index.html">Blogs</a>
-            <a href="../images/Gallery-index.html">Gallery</a>
-            <a href="../underConstruction.html">Construction Zone</a>
-        </nav>
-        
+        <img src="../images/logo128.png" alt="Logo" style="width:100px;height:100px;">
     </header>
+
+    <nav>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../about/index.html">About</a></li>
+            <li class="active"><a href="index.html">Blogs</a></li>
+            <li><a href="index.html">Contact Me</a></li>
+            <li><a href="index.html">Construction Zone</a></li>
+        </ul>
+    </nav>
     <article>
         <h1>
             As we may retroactively think.
