--- a/index.html
+++ b/index.html
@@ -1,44 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <script src="js/sidebar.js"></script>
-  <script src="js/index.js"></script>
-  <link href="css/stylesheet.css" rel="stylesheet">
-  <meta charset="UTF-8">
-  <meta name="desciption" content="Home page">
-  <meta name="author" content="Claudio Surmon">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>
-    Giovanni Suzzi
-  </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="css/stylesheet.css" rel="stylesheet">
+
+    <meta name="desciption" content="Home page">
+    <meta name="author" content="Claudio Surmon">
+
+    <title>Document</title>
 </head>
 
-<body id="body" onload="onLoad()" onresize="onLoad()">
-  <header>
-    <script src="js/nav.js"></script>
+<body>
+    <header>
+        <img src="images/logo128.png" alt="Logo" style="width:100px;height:100px;">
+    </header>
 
-    <h1>
-      <button class="openbtn" onclick="openNav()">&#9776;</button>
-      Giovanni Suzzi
-    </h1>
-    <h2>
-      The freelance mercenary turned freelance coder</h2>
-    <img src=images/PlaceHolder.png alt="PlaceHolder Image" longdesc="This is a PlaceHolder" height="256" width="256">
-  </header>
+    <nav>
+        <ul>
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="about/index.html">About</a></li>
+            <li><a href="blogs/index.html">Blogs</a></li>
+            <li><a href="contact/index.html">Contact Me</a></li>
+            <li><a href="construction/index.html">Construction Zone</a></li>
+        </ul>
+    </nav>
 
-  <main>
-    <h2>
-      Latest blog
-    </h2>
-    <a href="blogs/2020-02-28-blog5.html">Meta meta-data blog post</a>
+    <main>
+        <img src="images/logo-clear-1024.png" alt="Logo" style="width:512px;height:512px;">
+    </main>
 
-    <button onclick="colorButton()">Click me</button>
-  </main>
-
-  <footer>
-
-  </footer>
+    <footer>
+        <p>this is a footer</p>
+    </footer>
 
 </body>
 
