--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <img src="images/logo128.png" alt="Logo" style="width:100px;height:100px;">
+        <img src="images/Logo128.png" alt="Logo" style="width:100px;height:100px;">
     </header>
 
     <nav>
@@ -29,7 +29,7 @@
     </nav>
 
     <main>
-        <img src="images/logo-clear-1024.png" alt="Logo" style="width:512px;height:512px;">
+        <img src="images/Logo-clear-1024.png" alt="Logo" style="width:512px;height:512px;">
     </main>
 
     <footer>
