--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -21,10 +21,10 @@
     <nav>
         <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="../about/index.html">About</a></li>
-            <li class="active"><a href="index.html">Blogs</a></li>
-            <li><a href="index.html">Contact Me</a></li>
-            <li><a href="index.html">Construction Zone</a></li>
+            <li><a href="index.html">About</a></li>
+            <li class="active"><a href="../blogs/index.html">Blogs</a></li>
+            <li><a href="../contact/index.html">Contact Me</a></li>
+            <li><a href="../construction/index.html">Construction Zone</a></li>
         </ul>
     </nav>
     <article>
@@ -84,8 +84,8 @@
         </p>
     </article>
     <footer>
-        <a href=""> previous</a>
-        <a href="2020-02-26-blog2.html">next</a>
+
+        <a href="blog2.html"> &#129070</a>
     </footer>
 </body>
 
