--- a/blogs/blog3.html
+++ b/blogs/blog3.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-    <link href="../stylesheet.css" rel="stylesheet">
+    <link href="../css/stylesheet.css" rel="stylesheet">
     <meta charset="UTF-8">
-    <meta name="author" content="Claudio Surmon">
     <meta name="desciption" content="Blog about Giovanni's Introduction">
+    <meta name="author" content="Claudio Surmon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
         cout &lt;&lt; "Hello World";
@@ -13,18 +13,21 @@
 </head>
 
 <body>
+
     <header>
-        <nav>
-            <a href="../index.html">Home</a>
-            <a href="../about/me.html">About</a>
-            <a href="blog-index.html">Blogs</a>
-            <a href="../images/Gallery-index.html">Gallery</a>
-            <a href="../underConstruction.html">Construction Zone</a>
-        </nav>
+        <img src="../images/logo128.png" alt="Logo" style="width:100px;height:100px;">
     </header>
 
+    <nav>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="index.html">About</a></li>
+            <li class="active"><a href="../blogs/index.html">Blogs</a></li>
+            <li><a href="../contact/index.html">Contact Me</a></li>
+            <li><a href="../construction/index.html">Construction Zone</a></li>
+        </ul>
+    </nav>
     <article>
-
         <h1>
             cout &lt;&lt; "Hello World";
         </h1>
@@ -43,14 +46,10 @@
         <p>
 
         </p>
-
     </article>
     <footer>
-        <nav>
-            <a href="2020-02-26-blog2.html"> previous</a>
-            <a href="2020-02-28-blog4.html"> next</a>
-        </nav>
-
+        <a href="blog2.html"> &#129068</a>
+        <a href="blog4.html"> &#129070</a>
     </footer>
 </body>
 
