--- a/blogs/blog5.html
+++ b/blogs/blog5.html
@@ -4,28 +4,30 @@
 <head>
     <link href="../css/stylesheet.css" rel="stylesheet">
     <meta charset="UTF-8">
-    <meta name="author" content="Claudio Surmon">
     <meta name="desciption" content="Blog about Meta-data">
+    <meta name="author" content="Claudio Surmon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>
         Meta Meta data blog post;
     </title>
 </head>
 
 <body>
+
     <header>
-        <nav>
-            <a href="../index.html">Home</a>
-            <a href="../about/me.html">About</a>
-            <a href="blog-index.html">Blogs</a>
-            <a href="../images/Gallery-index.html">Gallery</a>
-            <a href="../underConstruction.html">Construction Zone</a>
-        </nav>
+        <img src="../images/logo128.png" alt="Logo" style="width:100px;height:100px;">
     </header>
 
+    <nav>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="index.html">About</a></li>
+            <li class="active"><a href="../blogs/index.html">Blogs</a></li>
+            <li><a href="../contact/index.html">Contact Me</a></li>
+            <li><a href="../construction/index.html">Construction Zone</a></li>
+        </ul>
+    </nav>
     <article>
-
         <h1>
             Meta Meta-data blog post
         </h1>
@@ -64,17 +66,9 @@
             0°N, 0°E in the Gulf of Guinea. Large amounts of photos seem to have been taken at this place as some
             software would enter (0,0) into the geolocation metatag erroneously
         </p>
-
-
-        </p>
-
     </article>
     <footer>
-        <nav>
-            <a href="2020-02-28-blog4.html"> previous</a>
-            <a href=""> next</a>
-        </nav>
-
+        <a href="blog4.html"> &#129068</a>
     </footer>
 </body>
 
