--- a/construction/index.html
+++ b/construction/index.html
@@ -84,7 +84,7 @@
             The colour palette was changed to be a more calming set of colours as can be seen below. The previous style
             was overly saturated on reflection.
         </p>
-        <img src=../images/Colour-Palette-2.png alt="Color Palette" longdesc="This is a PlaceHolder" width="600">
+        <img src=../images/Colour-Palette-2.PNG alt="Color Palette" longdesc="This is a PlaceHolder" width="600">
 
         <p>
             The mobile oriented menu was removed due to the bodged implementation and new focus on creating a more
