--- a/blogs/blog5.html
+++ b/blogs/blog5.html
@@ -15,7 +15,7 @@
 <body>
 
     <header>
-        <img src="../images/logo128.png" alt="Logo" style="width:100px;height:100px;">
+        <img src="../images/Logo128.png" alt="Logo" style="width:100px;height:100px;">
     </header>
 
     <nav>
@@ -69,6 +69,7 @@
     </article>
     <footer>
         <a href="blog4.html"> &#129068</a>
+        <a href="blog6.html"> &#129070</a>
     </footer>
 </body>
 
