--- a/blogs/blog6.html
+++ b/blogs/blog6.html
@@ -2,27 +2,31 @@
 <html>
 
 <head>
-    <script src="../js/sidebar.js"></script>
     <link href="../css/stylesheet.css" rel="stylesheet">
     <meta charset="UTF-8">
+    <meta name="desciption" content="Blog about Alternative Communication Ideas">
     <meta name="author" content="Claudio Surmon">
-    <meta name="desciption" content="Blog about Meta-data">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>
-        Meta Meta data blog post;
+        Alternative communications ideas
     </title>
 </head>
 
-<body id="body" onload="onLoad()" onresize="onLoad()">
-
-    <script src="../js/nav.js"></script>
+<body>
 
     <header>
-
-        <button class="openbtn" onclick="openNav()">&#9776;</button>
+        <img src="../images/Logo128.png" alt="Logo" style="width:100px;height:100px;">
     </header>
 
+    <nav>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="index.html">About</a></li>
+            <li class="active"><a href="../blogs/index.html">Blogs</a></li>
+            <li><a href="../contact/index.html">Contact Me</a></li>
+            <li><a href="../construction/index.html">Construction Zone</a></li>
+        </ul>
+    </nav>
     <article>
 
         <h1>
@@ -33,8 +37,10 @@
         </p>
 
         <p>
-            With the current pandemic universities are being urged to close down, however there are a significant amount
-            of students that cannot access online classes due to lack of internet. This allows for one to speculate
+            With the current pandemic universities are being urged to close down, however there are a
+            significant amount
+            of students that cannot access online classes due to lack of internet. This allows for one to
+            speculate
             about alternative methods for communicating over long distance.
         </p>
 
@@ -43,7 +49,8 @@
         </h2>
 
         <p>
-            As nice as 1080p60 video lectures are, they absolutely chew through bandwidth. Each individual stream using
+            As nice as 1080p60 video lectures are, they absolutely chew through bandwidth. Each individual
+            stream using
             12Mbps. For semi-apocalyptic situations this could prove devastating to try and maintain.
         </p>
 
@@ -52,7 +59,8 @@
         </h2>
 
         <p>
-            Having tiny files is great, but with people that have no internet it would defeat the purpose. Although some
+            Having tiny files is great, but with people that have no internet it would defeat the purpose.
+            Although some
             form of communication infrastructure does need to be inplace.
         </p>
 
@@ -61,10 +69,14 @@
         </h2>
 
         <p>
-            A potential solution would be the usage of various long range radio broadcasts. Depending on the assumed
-            technology people could have access to, if people have a laptop and software definded radio, people can use
-            WinLink (or something similar). Which would allow for email and file transfer over HF radio. However, the
-            data speeds are nothing to be impressed at, at 75 to 9600 bits its not breaking any records, so tiny files
+            A potential solution would be the usage of various long range radio broadcasts. Depending on the
+            assumed
+            technology people could have access to, if people have a laptop and software definded radio, people
+            can use
+            WinLink (or something similar). Which would allow for email and file transfer over HF radio.
+            However, the
+            data speeds are nothing to be impressed at, at 75 to 9600 bits its not breaking any records, so tiny
+            files
             is a must. Using plaintext would be necessary.
         </p>
 
@@ -74,8 +86,10 @@
 
         <p>
             Utilising telecommunications infrastructure, the university could deploy a system to have vocal data
-            containing voice recordings of lectures broadcast through conference calls, that software on a phone could
-            then decompress. (Otherwise the phone call would be as long as the lecture). This would allow for podcasts
+            containing voice recordings of lectures broadcast through conference calls, that software on a phone
+            could
+            then decompress. (Otherwise the phone call would be as long as the lecture). This would allow for
+            podcasts
             to be sent.
         </p>
 
@@ -84,11 +98,15 @@
         </h2>
 
         <p>
-            Using updated technology from the 80’s we could make a system to use phone systems to provide crude internet
-            access. If the system was more automated and instead of waiting for a user to browse for what they need,
+            Using updated technology from the 80’s we could make a system to use phone systems to provide crude
+            internet
+            access. If the system was more automated and instead of waiting for a user to browse for what they
+            need,
             having the system automatically grab and dump the files on the system and disconnect would help with
-            limiting bandwidth usage. Assuming the same speed of dail up, 56 kbit/s, a pdf of 1-5MB would take 11
-            minutes. However using a system similar to latex where the data is plaintext would allow for far shorter
+            limiting bandwidth usage. Assuming the same speed of dail up, 56 kbit/s, a pdf of 1-5MB would take
+            11
+            minutes. However using a system similar to latex where the data is plaintext would allow for far
+            shorter
             times, in the range of seconds.
         </p>
 
@@ -97,25 +115,26 @@
         </h2>
 
         <p>
-            For images that need to be transferred, using cold-war era technology could prove useful. As it would allow
-            higher resolution images to be carried while keeping bandwidth usage low, as it is possible to get away with
-            as little as 3kHz, so pushing up to more commercial bands (in the mega or even gigahertz range) would allow
+            For images that need to be transferred, using cold-war era technology could prove useful. As it
+            would allow
+            higher resolution images to be carried while keeping bandwidth usage low, as it is possible to get
+            away with
+            as little as 3kHz, so pushing up to more commercial bands (in the mega or even gigahertz range)
+            would allow
             far larger images at faster transfer speeds.
         </p>
 
         <p>
-            Software could maintain the transmission times, perhaps a catalog for the day’s transmissions would be sent
-            out using one of the previous methods. Then if a student needs a specific file, the system would tune in at
+            Software could maintain the transmission times, perhaps a catalog for the day’s transmissions would
+            be sent
+            out using one of the previous methods. Then if a student needs a specific file, the system would
+            tune in at
             the same time to retrieve the information and generate the image.
 
         </p>
-
     </article>
     <footer>
-        <nav>
-            <a href="2020-02-28-blog4.html"> previous</a>
-            <a href=""> next</a>
-        </nav>
+        <a href="blog5.html"> &#129068</a>
 
     </footer>
 </body>
