--- a/blogs/index.html
+++ b/blogs/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <img src="../images/logo128.png" alt="Logo" style="width:100px;height:100px;">
+        <img src="../images/Logo128.png" alt="Logo" style="width:100px;height:100px;">
     </header>
 
     <nav>
