Added images to cards in blog

--- a/blogs/blog3.html
+++ b/blogs/blog3.html
@@ -36,7 +36,7 @@
         </p>
 
         <figure>
-            <img src="../images/Placeholder.png" alt="Giovanni at war" width="640" height="458">
+            <img src="../images/PlaceHolder.png" alt="Giovanni at war" width="640" height="458">
             <figcaption>
                 Giovanni in the italian armed forces
                 </br>
