--- a/blogs/index.html
+++ b/blogs/index.html
@@ -37,7 +37,7 @@
 
     <main class="gridContainer">
         <a class="card" href="blog1.html">
-            <img src="../images/PlaceHolder.png" alt="avatar">
+            <img src="../images/Vannevar_Bush_portrait.jpg" alt="Portrait of Vannevar Bush">
             <div class="container">
                 <h2>
                     As we may retroactively think
@@ -48,7 +48,7 @@
             </div>
         </a>
         <a class="card" href="blog2.html">
-            <img src="../images/PlaceHolder.png" alt="avatar">
+            <img src="../images/Arpanet_logical_map.png" alt="Logical Map of Arpanet circa 1977">
             <div class="container">
                 <h2>
                     The Internet's First Hello World
@@ -59,7 +59,7 @@
             </div>
         </a>
         <a class="card" href="blog3.html">
-            <img src="../images/PlaceHolder.png" alt="avatar">
+            <img src="../images/dadWithGun.jpg" alt="Giovanni at war">
             <div class="container">
                 <h2>
                     cout &lt;&lt; "Hello World";
@@ -81,7 +81,7 @@
             </div>
         </a>
         <a class="card" href="blog5.html">
-            <img src="../images/PlaceHolder.png" alt="avatar">
+            <img src="../images/Henry-Cat2.jpg" alt="Henry the cat">
             <div class="container">
                 <h2>
                     Meta Meta-data blog post
