--- a/blogs/blog4.html
+++ b/blogs/blog4.html
@@ -56,6 +56,11 @@
         <a href="blog3.html"> &#129068</a>
         <a href="blog5.html"> &#129070</a>
     </footer>
+    <footer>
+        <p>
+            Copyright &copy; 2020 Suzzi Inc. Ltd.
+        </p>
+    </footer>
 </body>
 
 </html>
