--- a/contact/index.html
+++ b/contact/index.html
@@ -48,7 +48,9 @@
     </main>
 
     <footer>
-        <p>this is a footer</p>
+        <p>
+            Copyright &copy; 2020 Suzzi Inc. Ltd.
+        </p>
     </footer>
 
 </body>
