--- a/blogs/blog3.html
+++ b/blogs/blog3.html
@@ -51,6 +51,11 @@
         <a href="blog2.html"> &#129068</a>
         <a href="blog4.html"> &#129070</a>
     </footer>
+    <footer>
+        <p>
+            Copyright &copy; 2020 Suzzi Inc. Ltd.
+        </p>
+    </footer>
 </body>
 
 </html>
