--- a/blogs/blog6.html
+++ b/blogs/blog6.html
@@ -137,6 +137,11 @@
         <a href="blog5.html"> &#129068</a>
 
     </footer>
+    <footer>
+        <p>
+            Copyright &copy; 2020 Suzzi Inc. Ltd.
+        </p>
+    </footer>
 </body>
 
 </html>
