--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     </main>
 
     <footer>
-        <p>this is a footer</p>
+        <p>
+            Copyright &copy; 2020 Suzzi Inc. Ltd.
+        </p>
     </footer>
 
 </body>
