testing generating links

--- a/blogs/blog6.html
+++ b/blogs/blog6.html
@@ -3,6 +3,7 @@
 
 <head>
     <link href="../css/stylesheet.css" rel="stylesheet">
+    <script src="../js/nav.js"></script>
     <meta charset="UTF-8">
     <meta name="desciption" content="Blog about Alternative Communication Ideas">
     <meta name="author" content="Claudio Surmon">
@@ -12,20 +13,14 @@
     </title>
 </head>
 
-<body>
+<body onload="insertElements()">
 
     <header>
-        <img src="../images/Logo128.png" alt="Logo" style="width:100px;height:100px;">
+
     </header>
 
     <nav>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="index.html">About</a></li>
-            <li class="active"><a href="../blogs/index.html">Blogs</a></li>
-            <li><a href="../contact/index.html">Contact Me</a></li>
-            <li><a href="../construction/index.html">Construction Zone</a></li>
-        </ul>
+
     </nav>
     <article>
 
