added dynamic navbar

--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -3,6 +3,7 @@
 
 <head>
     <link href="../css/stylesheet.css" rel="stylesheet">
+    <script src="../js/nav.js"></script>
     <meta charset="UTF-8">
     <meta name="desciption" content="Blog about as we may think">
     <meta name="author" content="Claudio Surmon">
@@ -12,21 +13,11 @@
     </title>
 </head>
 
-<body>
+<body onload="insertElements(2)">
 
-    <header>
-        <img src="../images/Logo128.png" alt="Logo" style="width:100px;height:100px;">
-    </header>
+    <header></header>
 
-    <nav>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="index.html">About</a></li>
-            <li class="active"><a href="../blogs/index.html">Blogs</a></li>
-            <li><a href="../contact/index.html">Contact Me</a></li>
-            <li><a href="../construction/index.html">Construction Zone</a></li>
-        </ul>
-    </nav>
+    <nav></nav>
     <article>
         <h1>
             As we may retroactively think.
