--- a/about/index.html
+++ b/about/index.html
@@ -13,20 +13,10 @@
     <title>Document</title>
 </head>
 
-<body>
-    <header>
-        <img src="../images/Logo128.png" alt="Logo" style="width:100px;height:100px;">
-    </header>
+<body onload="insertElements(1)">
+    <header></header>
 
-    <nav>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li class="active"><a href="index.html">About</a></li>
-            <li><a href="../blogs/index.html">Blogs</a></li>
-            <li><a href="../contact/index.html">Contact Me</a></li>
-            <li><a href="../construction/index.html">Construction Zone</a></li>
-        </ul>
-    </nav>
+    <nav></nav>
 
     <main>
         <h1>
