--- a/blogs/blog6.html
+++ b/blogs/blog6.html
@@ -15,13 +15,8 @@
 
 <body onload="insertElements(2)">
 
-    <header>
-
-    </header>
-
-    <nav>
-
-    </nav>
+    <header></header>
+    <nav></nav>
     <article>
 
         <h1>
