--- a/contact/index.html
+++ b/contact/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="../css/stylesheet.css" rel="stylesheet">
+    <script src="../js/nav.js"></script>
 
     <meta name="desciption" content="Contact page">
     <meta name="author" content="Claudio Surmon">
@@ -13,20 +14,10 @@
     <title>Contact Me</title>
 </head>
 
-<body>
-    <header>
-        <img src="../images/Logo128.png" alt="Logo" style="width:100px;height:100px;">
-    </header>
+<body onload="insertElements(3)">
+    <header></header>
 
-    <nav>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../about/index.html">About</a></li>
-            <li><a href="../blogs/index.html">Blogs</a></li>
-            <li class="active"><a href="../contact/index.html">Contact Me</a></li>
-            <li><a href="../construction/index.html">Construction Zone</a></li>
-        </ul>
-    </nav>
+    <nav></nav>
 
     <main>
 
