--- a/about/index.html
+++ b/about/index.html
@@ -7,6 +7,8 @@
 
     <link href="../css/stylesheet.css" rel="stylesheet">
 
+    <script src="/WSOA3028A_1830290/js/nav.js"></script>
+
     <meta name="desciption" content="About page">
     <meta name="author" content="Claudio Surmon">
 
