--- a/contact/index.html
+++ b/contact/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="../css/stylesheet.css" rel="stylesheet">
-    <script src="../js/nav.js"></script>
+    <script src="/WSOA3028A_1830290/js/nav.js"></script>
 
     <meta name="desciption" content="Contact page">
     <meta name="author" content="Claudio Surmon">
